--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Hello, from Netology!</h1>
-  <img src="img/netology.svg" alt="Netology Logo" style="width: 460px; height: 460px;">
+  <img src="./img/netology.svg" alt="Netology Logo" style="width: 460px; height: 460px;">
 </body>
 
 </html>
